Fixed tooltip for fund performace and bg for dark mode

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,6 +119,10 @@ body {
   align-items: center;
   padding-top: 200px;
   padding-bottom: 100px;
+  background-image: url("../../public/images/hero-squares.webp");
+  background-position: center 0%;
+  background-repeat: no-repeat;
+  background-size: contain;
   gap: 35px;
   width: 100%;
   height: 100%;
